# navalmartin_mir_aws_utils

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
src/navalmartin_mir_aws_utils/: __init__.py  aws_credentials.py  boto3_client.py  cognito_idp_utils.py  env_utils.py  exceptions.py  file_s3_batch.py  image_s3_batch.py  s3_utils.py  sqs_queue_config.py  sqs_utils.py  utils.py
src/navalmartin_mir_aws_utils/examples/: create_image_batch.py  create_sagemaker_model.py  lamda_task_decorator.py  managing_objects_on_s3.py  send_sqs_message.py  working_with_cognito.py  working_with_s3.py  working_with_secrets_manager.py  working_with_ses.py  working_with_sqs.py  working_with_state_functions.py
src/navalmartin_mir_aws_utils/tasks/: __init__.py
src/navalmartin_mir_aws_utils/tasks/ses_tasks/: ses_tasks.py
src/navalmartin_mir_aws_utils/tasks_lambdas/: __init__.py  aws_tasks_decorator.py  tasks_lambdas_utils.py
src/navalmartin_mir_aws_utils/utils/: __init__.py  cognito_user_data.py  sfn_utils.py  simple_email.py  utils.py
